Added google logo image and resized to real size

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-  <h1>Google</h1>
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <img src="./googlelogo.png" width="272" heigh="292">
+  </body>
 </html>
