Centered google logo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <img src="./googlelogo.png" width="272" heigh="292">
+    <div class="logo-placement">
+      <img src="./googlelogo.png" width="272" height="92">
+    </div>
+    <div id="search-box"></div>
   </body>
 </html>
