--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <div class="logo-placement">
       <img src="./googlelogo.png" width="272" height="92">
     </div>
-    <div id="search-box"></div>
+    <div id="search-box">
+      <img id="magnifying-glass" src="magnifying glass.png" 
+            width="20" height="20">
+    </div>
   </body>
 </html>
