--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
       <img id="magnifying-glass" src="magnifying glass.png" 
             width="20" height="20">
     </div>
+    <div id="search-button">
+      <div id="text"><p>Google Search</p></div>
+    </div>
+    <div id="feeling-lucky">
+      <div id="text"><p>Feeling Lucky</p></div>
+    </div>
   </body>
 </html>
